data save in the backend and redirect to another page

--- a/myproject/tourshare/templates/tourshare/checkout.html
+++ b/myproject/tourshare/templates/tourshare/checkout.html
@@ -79,7 +79,7 @@
 
 
         <div id="form_fist" class="form_1_first">
-            <form action="/tourshare/connect/" method="post" enctype="multipart/form-data" > {% csrf_token %}
+            <form action="/tourshare/checkout/" method="post" enctype="multipart/form-data" > {% csrf_token %}
 
 
                 <div class="container_1">
