--- a/myproject/tourshare/templates/tourshare/connect.html
+++ b/myproject/tourshare/templates/tourshare/connect.html
@@ -105,7 +105,7 @@ body {
     }
     </style>
 
-    <form id="post-form" method="POST" action="/tourshare/checkview/">
+    <form id="post-form" method="POST" action="/tourshare/checkview" enctype="multipart/form-data"  >
         {% csrf_token %}
         <label>Room Name</label>
         <input type="text" name="room_name" id="room_name" width="100px" />
